selector -> toolbox-selector

--- a/_includes/blocks/app-nav/app-nav-tab1.html
+++ b/_includes/blocks/app-nav/app-nav-tab1.html
@@ -33,8 +33,8 @@
             <ul class="toolbox-table__rowInner toolbox-table__rowInner--item JS_filterableCell">
               <li class="toolbox-table__cell toolbox-table__cell--permalink" tabindex="0">
                 <div class="toolbox-table__cellInner ">
-                  {% assign selectorData = ",,," | append: item %}
-                  {% include components/selector.html selectorData=selectorData expanded="true" singleselect="true" readonly="true" selectedIndexes="1" %}
+                  {% assign toolboxSelectorData = ",,," | append: item %}
+                  {% include components/toolbox-selector.html toolboxSelectorData=toolboxSelectorData expanded="true" singleselect="true" readonly="true" selectedIndexes="1" %}
                 </div>
               </li>
             </ul>
