--- a/_includes/blocks/toolbox-table/toolbox-table-inner.html
+++ b/_includes/blocks/toolbox-table/toolbox-table-inner.html
@@ -74,7 +74,7 @@
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,32072" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,32072" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
@@ -82,12 +82,12 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,Jonathan Langens" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,Jonathan Langens" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-3">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData="blue,,,281;green,,,282;salmon,,,283" multiselect="true" selectedIndexes="1,2,3" %}
+          {% include components/toolbox-selector.html toolboxSelectorData="blue,,,281;green,,,282;salmon,,,283" multiselect="true" selectedIndexes="1,2,3" %}
         </div>
       </li>
     </ul>
@@ -99,7 +99,7 @@
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,32750" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,32750" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
@@ -107,12 +107,12 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,Koen" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,Koen" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-3">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData="gray,,,275;black,,,scripting:common" multiselect="true" selectedIndexes="1,2" %}
+          {% include components/toolbox-selector.html toolboxSelectorData="gray,,,275;black,,,scripting:common" multiselect="true" selectedIndexes="1,2" %}
         </div>
       </li>
     </ul>
@@ -124,7 +124,7 @@
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,32454" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,32454" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
@@ -132,12 +132,12 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,_Not Assigned" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,_Not Assigned" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-3">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData="gray,,,275;yellow,,,276" multiselect="true" selectedIndexes="1,2" %}
+          {% include components/toolbox-selector.html toolboxSelectorData="gray,,,275;yellow,,,276" multiselect="true" selectedIndexes="1,2" %}
         </div>
       </li>
     </ul>
