--- a/_includes/blocks/toolbox-table/toolbox-table-readonly.html
+++ b/_includes/blocks/toolbox-table/toolbox-table-readonly.html
@@ -67,7 +67,7 @@
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,395415" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,395415" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
