--- a/_includes/blocks/toolbox-table/toolbox-table.html
+++ b/_includes/blocks/toolbox-table/toolbox-table.html
@@ -75,7 +75,7 @@
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,395415" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,395415" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
@@ -83,12 +83,12 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,Vasya Aksyonov" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,Vasya Aksyonov" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="2" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="2" %}
         </div>
       </li>
     </ul>
@@ -100,7 +100,7 @@
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,395415" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,395415" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
@@ -108,12 +108,12 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,Vasya Aksyonov" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,Vasya Aksyonov" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="2" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="2" %}
         </div>
       </li>
     </ul>
@@ -134,12 +134,12 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,_Not Assigned" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,_Not Assigned" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
     </ul>
@@ -154,7 +154,7 @@
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,31795" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,31795" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
@@ -162,12 +162,12 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,Andriy Lisoyov" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,Andriy Lisoyov" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
     </ul>
@@ -180,7 +180,7 @@
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,161531" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,161531" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
@@ -188,12 +188,12 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,Manuel" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,Manuel" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="2" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="2" %}
         </div>
       </li>
     </ul>
@@ -206,7 +206,7 @@
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,283377" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,283377" readonly="true" singleselect="true" expanded="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell flex-grow-2 toolbox-table__cell--permalink" tabindex="0">
@@ -214,12 +214,12 @@
       </li>
       <li class="toolbox-table__cell flex-grow-2">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,Elton" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,Elton" singleselect="true" selectedIndexes="1" %}
         </div>
       </li>
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner">
-          {% include components/selector.html selectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="2" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="2" %}
         </div>
       </li>
     </ul>
