--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -26,7 +26,7 @@
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
             <div class="toolbox-table__value">
-              {% include components/selector.html selectorData=",,Any,Typed keyword" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+              {% include components/toolbox-selector.html toolboxSelectorData=",,Any,Typed keyword" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
             </div>
           </div>
@@ -38,7 +38,7 @@
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
             <div class="toolbox-table__value">
-              {% include components/selector.html selectorData=",,title,Enhance login formula for listly" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+              {% include components/toolbox-selector.html toolboxSelectorData=",,title,Enhance login formula for listly" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
             </div>
           </div>
@@ -50,7 +50,7 @@
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
             <div class="toolbox-table__value">
-              {% include components/selector.html selectorData=",,Assigned to,Nick De Jaeger keyword" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+              {% include components/toolbox-selector.html toolboxSelectorData=",,Assigned to,Nick De Jaeger keyword" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
             </div>
           </div>
@@ -62,7 +62,7 @@
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner">
             <div class="toolbox-table__value">
-              {% include components/selector.html selectorData=",,Priority,Critical" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+              {% include components/toolbox-selector.html toolboxSelectorData=",,Priority,Critical" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
             </div>
           </div>
         </li>
