--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -40,7 +40,7 @@
     {% include components/push.html href="inputs" title="Inputs" go="true" %}
     {% include components/push.html href="toolbox-table" title="toolbox-table" go="true" %}
     {% include components/push.html href="popups" title="Popups and overlay" go="true" %}
-    {% include components/push.html href="selectors" title="Selectors" go="true" %}
+    {% include components/push.html href="toolbox-selectors" title="toolbox-selectors" go="true" %}
     {% include components/push.html href="tabs" title="Tabs" go="true" %}
   </section>
 
