--- a/_includes/blocks/extra-options/background.html
+++ b/_includes/blocks/extra-options/background.html
@@ -3,16 +3,16 @@
     <div class="field__label">Background</div>
     <div class="field__data">
       <div class="field__value">
-        <div class="selector selector--singleselect selector--expanded selector--required JS_selector JS_extra">
-          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem" tabindex='0'>
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--field JS_background_light">Light</div>
+        <div class="toolbox-selector toolbox-selector--singleselect toolbox-selector--expanded toolbox-selector--required JS_toolbox-selector JS_extra">
+          <div class="toolbox-selector__item JS_toolbox-selectorItem--active toolbox-selector__item--selected JS_toolbox-selectorItem" tabindex='0'>
+            <div class="toolbox-selector__block">
+              <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field JS_background_light">Light</div>
             </div>
           </div>
-          <div class="selector__itemSeperator"></div>
-          <div class="selector__item JS_selectorItem" tabindex='0'>
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--prefix JS_background_dark">Dark</div>
+          <div class="toolbox-selector__itemSeperator"></div>
+          <div class="toolbox-selector__item JS_toolbox-selectorItem" tabindex='0'>
+            <div class="toolbox-selector__block">
+              <div class="toolbox-selector__blockPart toolbox-selector__blockPart--prefix JS_background_dark">Dark</div>
             </div>
           </div>
         </div>
