--- a/_includes/blocks/item-header/item-header.html
+++ b/_includes/blocks/item-header/item-header.html
@@ -5,7 +5,7 @@
     <div class="header__title">
       <div class="header__type header__type--bug">
         <div class="header__label header__label--bug">
-          {% include components/selector.html selectorData=",,Bug," expanded="true"  singleselect="true" readonly="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,Bug," expanded="true"  singleselect="true" readonly="true" selectedIndexes="1" %}
         </div>
         <span class="header__id">391441</span>
       </div>
@@ -17,27 +17,27 @@
       <div class="block-action disabled"></div>
       <div class="block-action"><sup></sup></div>
       <div class="block-action readonly">
-        {% include components/selector.html selectorData=",,,Ongoing" expanded="true"  singleselect="true" readonly="true" selectedIndexes="1" %}
+        {% include components/toolbox-selector.html toolboxSelectorData=",,,Ongoing" expanded="true"  singleselect="true" readonly="true" selectedIndexes="1" %}
 
       </div>
       <div class="block-action readonly">
 
-        <div class="selector selector--singleselect selector--expanded JS_selector">
-          <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_panels-state-1" panel-name="overview">
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--prefix"></div>
+        <div class="toolbox-selector toolbox-selector--singleselect toolbox-selector--expanded JS_toolbox-selector">
+          <div class="toolbox-selector__item JS_toolbox-selectorItem--active toolbox-selector__item--selected JS_toolbox-selectorItem JS_panels-state-1" panel-name="overview">
+            <div class="toolbox-selector__block">
+              <div class="toolbox-selector__blockPart toolbox-selector__blockPart--prefix"></div>
             </div>
           </div>
-          <div class="selector__itemSeperator"></div>
-          <div class="selector__item  JS_selectorItem JS_panels-state-2" panel-name="comments-attachments">
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--prefix"><sup>11</sup></div>
+          <div class="toolbox-selector__itemSeperator"></div>
+          <div class="toolbox-selector__item  JS_toolbox-selectorItem JS_panels-state-2" panel-name="comments-attachments">
+            <div class="toolbox-selector__block">
+              <div class="toolbox-selector__blockPart toolbox-selector__blockPart--prefix"><sup>11</sup></div>
             </div>
           </div>
-          <div class="selector__itemSeperator"></div>
-          <div class="selector__item JS_selectorItem JS_panels-state-3" panel-name="history">
-            <div class="selector__block">
-              <div class="selector__blockPart selector__blockPart--prefix"></div>
+          <div class="toolbox-selector__itemSeperator"></div>
+          <div class="toolbox-selector__item JS_toolbox-selectorItem JS_panels-state-3" panel-name="history">
+            <div class="toolbox-selector__block">
+              <div class="toolbox-selector__blockPart toolbox-selector__blockPart--prefix"></div>
             </div>
           </div>
         </div>
