--- a/_includes/blocks/popup/ms-included-toggle.html
+++ b/_includes/blocks/popup/ms-included-toggle.html
@@ -1,7 +1,7 @@
-<div class="selector JS_toggle--InclExcl">
-  <div class="selector__item JS_selectorItem--active selector__item--selected">
-    <div class="selector__block">
-      <span class="selector__blockPart selector__blockPart--label JS_inclExl" data-filter="Include">Include</span>
+<div class="toolbox-selector JS_toggle--InclExcl">
+  <div class="toolbox-selector__item JS_toolbox-selectorItem--active toolbox-selector__item--selected">
+    <div class="toolbox-selector__block">
+      <span class="toolbox-selector__blockPart toolbox-selector__blockPart--label JS_inclExl" data-filter="Include">Include</span>
     </div>
   </div>
 </div>
