--- a/_includes/blocks/popup/ms-sublist-options.html
+++ b/_includes/blocks/popup/ms-sublist-options.html
@@ -4,16 +4,16 @@
     <ul class="toolbox-table__rowInner toolbox-table__rowInner--item">
       <li class="toolbox-table__cell">
         <div class="toolbox-table__cellInner JS_toggle--options">
-          <div class="selector selector--singleselect selector--required selector--expanded JS_selector">
-            <div class="selector__item JS_selectorItem JS_columnPickerOption--enabled">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field"></div>
+          <div class="toolbox-selector toolbox-selector--singleselect toolbox-selector--required toolbox-selector--expanded JS_toolbox-selector">
+            <div class="toolbox-selector__item JS_toolbox-selectorItem JS_columnPickerOption--enabled">
+              <div class="toolbox-selector__block">
+                <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field"></div>
               </div>
             </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem JS_selectorItem--active selector__item--selected">
-              <div class="selector__block ">
-                <div class="selector__blockPart selector__blockPart--field"></div>
+            <div class="toolbox-selector__itemSeperator"></div>
+            <div class="toolbox-selector__item JS_toolbox-selectorItem JS_toolbox-selectorItem--active toolbox-selector__item--selected">
+              <div class="toolbox-selector__block ">
+                <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field"></div>
               </div>
             </div>
           </div>
