--- a/_includes/blocks/popup/ms-sublist-tags-colors-color.html
+++ b/_includes/blocks/popup/ms-sublist-tags-colors-color.html
@@ -5,10 +5,10 @@
         <li class="toolbox-table__cell">
           <div class="toolbox-table__cellInner JS_toolbox-table__cellInner--color">
             <div class="toolbox-table__action">
-              <div class="selector selector--expanded">
-                <div class="selector__item JS_selectorItem--active selector__item--selected">
-                  <div class="selector__block">
-                    <span class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{item.color}};" data-color="{{item.color}}"></span>
+              <div class="toolbox-selector toolbox-selector--expanded">
+                <div class="toolbox-selector__item JS_toolbox-selectorItem--active toolbox-selector__item--selected">
+                  <div class="toolbox-selector__block">
+                    <span class="toolbox-selector__blockPart toolbox-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{item.color}};" data-color="{{item.color}}"></span>
                   </div>
                 </div>
               </div>
