--- a/_includes/javascript/colorPrefix.html
+++ b/_includes/javascript/colorPrefix.html
@@ -1,1 +1,1 @@
-<div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: ${color};" data-color="${color}"></div>
+<div class="toolbox-selector__blockPart toolbox-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: ${color};" data-color="${color}"></div>
