--- a/_includes/javascript/newSelectedItem--unit.html
+++ b/_includes/javascript/newSelectedItem--unit.html
@@ -1,11 +1,11 @@
 <div class="toolbox-table__cellInner ${excludeClass} ${colorToggleTriggerInnerClass}">
 
   ${colorToggleHTML}
-  <div class="selector selector--expanded selector--readonly selector--singleselect">
-    <div class="selector__item JS_selectorItem--active selector__item--selected">
-      <div class="selector__block">
+  <div class="toolbox-selector toolbox-selector--expanded toolbox-selector--readonly toolbox-selector--singleselect">
+    <div class="toolbox-selector__item JS_toolbox-selectorItem--active toolbox-selector__item--selected">
+      <div class="toolbox-selector__block">
         ${colorPrefixHTML}
-        <div class="selector__blockPart selector__blockPart--field JS_text">${textOfActionItem}</div>
+        <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field JS_text">${textOfActionItem}</div>
       </div>
     </div>
   </div>
