--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -23,7 +23,7 @@
         </li>
         <li class="toolbox-table__cell text-right">
           <div class="toolbox-table__cellInner">
-            {% include javascript/and-or-selector.html %}
+            {% include javascript/and-or-toolbox-selector.html %}
           </div>
         </li>
         <li class="toolbox-table__cell flex-grow-0 toolbox-table__cell--action JS_toolbox-table__cell--remove JS_toolbox-table__cell--removeAll JS_toolbox-table__action">
@@ -44,7 +44,7 @@
               </li>
               <li class="toolbox-table__cell text-right">
                 <div class="toolbox-table__cellInner">
-                  {% include javascript/and-or-selector.html %}
+                  {% include javascript/and-or-toolbox-selector.html %}
                 </div>
               </li>
               <li class="toolbox-table__cell flex-grow-0 toolbox-table__cell--action JS_toolbox-table__cell--remove JS_toolbox-table__cell--removeAll JS_toolbox-table__action">
@@ -61,7 +61,7 @@
                     <li class="toolbox-table__cell">
                       <div class="toolbox-table__cellInner">
                         <div class="toolbox-table__value">
-                          {% include components/selector.html selectorData=",,,next 2 weeks (12/03/18-25/03/18)" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+                          {% include components/toolbox-selector.html toolboxSelectorData=",,,next 2 weeks (12/03/18-25/03/18)" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
                         </div>
                       </div>
@@ -78,7 +78,7 @@
                     <li class="toolbox-table__cell">
                       <div class="toolbox-table__cellInner">
                         <div class="toolbox-table__value">
-                          {% include components/selector.html selectorData=",,,19/03/18-20/03/18" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+                          {% include components/toolbox-selector.html toolboxSelectorData=",,,19/03/18-20/03/18" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
                         </div>
                       </div>
                     </li>
@@ -101,7 +101,7 @@
               </li>
               <li class="toolbox-table__cell text-right">
                 <div class="toolbox-table__cellInner">
-                  {% include javascript/and-or-selector.html %}
+                  {% include javascript/and-or-toolbox-selector.html %}
                 </div>
               </li>
               <li class="toolbox-table__cell flex-grow-0 toolbox-table__cell--action JS_toolbox-table__cell--remove JS_toolbox-table__cell--removeAll JS_toolbox-table__action">
@@ -118,7 +118,7 @@
                     <li class="toolbox-table__cell">
                       <div class="toolbox-table__cellInner">
                         <div class="toolbox-table__value">
-                          {% include components/selector.html selectorData=",,,today" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+                          {% include components/toolbox-selector.html toolboxSelectorData=",,,today" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
                         </div>
                       </div>
@@ -135,7 +135,7 @@
                     <li class="toolbox-table__cell">
                       <div class="toolbox-table__cellInner">
                         <div class="toolbox-table__value">
-                          {% include components/selector.html selectorData=",,,18/04/18" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+                          {% include components/toolbox-selector.html toolboxSelectorData=",,,18/04/18" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
                         </div>
                       </div>
@@ -190,7 +190,8 @@
                   <div class="toolbox-table__cellInner ">
                     <div class="toolbox-table__value">
 
-                      {% include blocks/popup/selector-include-exclude.html selected="exclude"%} {% include components/selector.html selectorData=",,,today" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+                      {% include blocks/popup/toolbox-selector-include-exclude.html selected="exclude"%}
+                      {% include components/toolbox-selector.html toolboxSelectorData=",,,today" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
                     </div>
                   </div>
                 </li>
@@ -225,11 +226,11 @@
                   <div class="toolbox-table__cellInner ">
                     <div class="toolbox-table__value">
 
-                      {% include blocks/popup/selector-include-exclude.html selected="exclude"%}
-                      <div class="selector selector--expanded JS_toggle--calendar">
-                        <div class="selector__item JS_selectorItem--active selector__item--selected">
-                          <div class="selector__block">
-                            <div class="selector__blockPart selector__blockPart--field JS_text">18/04/18</div>
+                      {% include blocks/popup/toolbox-selector-include-exclude.html selected="exclude"%}
+                      <div class="toolbox-selector toolbox-selector--expanded JS_toggle--calendar">
+                        <div class="toolbox-selector__item JS_toolbox-selectorItem--active toolbox-selector__item--selected">
+                          <div class="toolbox-selector__block">
+                            <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field JS_text">18/04/18</div>
                           </div>
                         </div>
                       </div>
@@ -269,7 +270,7 @@
                   <div class="toolbox-table__cellInner">
                     <div class="toolbox-table__value">
 
-                      {% include blocks/popup/selector-include-exclude.html selected="include"%} {% include components/selector.html selectorData=",,,19/03/18-20/03/18" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+                      {% include blocks/popup/toolbox-selector-include-exclude.html selected="include"%} {% include components/toolbox-selector.html toolboxSelectorData=",,,19/03/18-20/03/18" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
                     </div>
                   </div>
@@ -306,7 +307,8 @@
                   <div class="toolbox-table__cellInner">
                     <div class="toolbox-table__value">
 
-                      {% include blocks/popup/selector-include-exclude.html selected="include"%} {% include components/selector.html selectorData=",,,next 2 weeks (12/03/18-25/03/18)" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
+                      {% include blocks/popup/toolbox-selector-include-exclude.html selected="include"%}
+                      {% include components/toolbox-selector.html toolboxSelectorData=",,,next 2 weeks (12/03/18-25/03/18)" expanded="true" readonly="true" singleselect="true" selectedIndexes="1" %}
 
                     </div>
                   </div>
