--- a/sass/components/field.scss
+++ b/sass/components/field.scss
@@ -76,11 +76,11 @@
       background: linear-gradient(90deg, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 80%,rgba(255,255,255,1) 100%);
     }
     */
-    .selector {
+    .toolbox-selector {
       margin: 0 3px 0 0;
     }
 
-    .selector ~ .field__input {
+    .toolbox-selector ~ .field__input {
       position: absolute;
       left: 0;
       top: -5px;
