--- a/sass/theme-dark.scss
+++ b/sass/theme-dark.scss
@@ -32,7 +32,7 @@ body.theme-dark {
       color: #FFF;
     }
 
-    .selector__blockPart {
+    .toolbox-selector__blockPart {
       background-color: #282828;
     }
   }
